--- a/expe.tex
+++ b/expe.tex
@@ -193,7 +193,7 @@ It can be however estimated that when % TiO$_{2}$
 ellipsoidal particles were randomly sprinkled on the glass, they would lie mostly on their flat side -- i.e. their orientation would enable to measure the \textit{medium} $\rho_b$ and \textit{major} axes $\rho_c$ of the ellipsoid. This is in contrast with the process of sieving, as described above, where the particles were discriminated according to their and \textit{minor} $\rho_a$ and \textit{medium} $\rho_b$ axes. 
 
 This source of error is probably similarly important as another one, arising from rough shapes of the particles which could not always be well approximated by an ellipsoid. 
-\todo{add the previous and resulting statistics? the THz spectra should better go to the Results }
+%\todo{add the previous and resulting statistics? the THz spectra should better go to the Results }
 %}}}
 
 \section{Laser cutting}
