--- a/fdphd.bib
+++ b/fdphd.bib
@@ -1435,6 +1435,15 @@ Terahertz spectroscopy of ferroelectrics and related materials
   year={2011},
   publisher={Optical Society of America}
 }
+
+
+
+
+
+
+
+
+
 @article{jelinek2010fishnet,
   title={Fishnet metamaterials-rules for refraction and limits of homogenization},
   author={Jelinek, Lukas and Marques, Ricardo and Machac, Jan},
@@ -1535,6 +1544,62 @@ Terahertz spectroscopy of ferroelectrics and related materials
   year={1998},
   publisher={Nature Publishing Group}
 }
+
+
+
+
+\begin{figure}[htb] %{{{ fg_yslit_dscan
+	\caption{\textbf{(a)} Reflectance and \textbf{(d)} the imaginary part of the retrieved refractive index  %TODO 
+	% todo  Fishnet xholesize=2.000e-05 resolution=2.000e-06 cellsize=1.000e-04 cellsizexy=1.000e-04 yholesize=inf.dat slabthick=*
+	} \label{fg_yslit_dscan}  \centering
+\begin{overpic}[width=0.48\textwidth]{img-meep/yslit_dscan_r.pdf}\put(-1,80){\textbf{(a)}}\end{overpic}
+\begin{overpic}[width=0.48\textwidth]{img-meep/yslit_dscan_ni.pdf}\put(-1,80){\textbf{(b)}}\end{overpic}\\
+\end{figure}
+%}}}
+@article{zhang2005near,
+  title={Near-infrared double negative metamaterials},
+  author={Zhang, Shuang and Fan, Wenjun and Malloy, KJ and Brueck, SRJ and Panoiu, NC and Osgood, RM},
+  journal={Optics Express},
+  volume={13},
+  number={13},
+  pages={4922--4930},
+  year={2005},
+  publisher={Optical Society of America}
+}
+
+@article{marquus2009analytical,
+  title={Analytical theory of wave propagation through stacked fishnet metamaterials},
+  author={Marqu{\'U}s, R and Jelinek, L and Mesa, F and Medina, F},
+  journal={Optics express},
+  volume={17},
+  number={14},
+  pages={11582--11593},
+  year={2009},
+  publisher={Optical Society of America}
+}
+
+@article{freire2008experimental,
+  title={Experimental demonstration of a $\mu$=- 1 metamaterial lens for magnetic resonance imaging},
+  author={Freire, Manuel J and Marques, Ricardo and Jelinek, Lukas},
+  journal={Applied Physics Letters},
+  volume={93},
+  number={23},
+  pages={231108},
+  year={2008},
+  publisher={AIP Publishing}
+}
+
+@article{jelinek2011metamaterial,
+  title={Metamaterial-inspired perfect tunnelling in semiconductor heterostructures},
+  author={Jelinek, L and Baena, JD and Voves, J and Marques, R},
+  journal={New Journal of Physics},
+  volume={13},
+  number={8},
+  pages={083011},
+  year={2011},
+  publisher={IOP Publishing}
+}
+
 
 
 /*}}}*/
