--- a/t.tex
+++ b/t.tex
@@ -39,22 +39,22 @@
 
  
 \begin{document}
-%\input{title.tex}
-%\tableofcontents
+\input{title.tex}
+\tableofcontents
 %
-%\chapter{Introduction}
-%\input{intro.tex}
-%
-%\chapter{Theory} 
-%\begin{flushright}  \textit{``There is nothing more practical than a good theory.''} --- probably K. Lewin \end{flushright}
-%\input{theory.tex}
-%
-%\chapter{Numerical methods} 
-%\begin{flushright}  \textit{``Computers are useless. They can only give you answers.''} --- P. Picasso (1968) \end{flushright}
-%\input{numeric.tex}
-%
-%\chapter{Experimental methods}
-%\input{expe.tex}
+\chapter{Introduction}
+\input{intro.tex}
+
+\chapter{Theory} 
+\begin{flushright}  \textit{``There is nothing more practical than a good theory.''} --- probably K. Lewin \end{flushright}
+\input{theory.tex}
+
+\chapter{Numerical methods} 
+\begin{flushright}  \textit{``Computers are useless. They can only give you answers.''} --- P. Picasso (1968) \end{flushright}
+\input{numeric.tex}
+
+\chapter{Experimental methods}
+\input{expe.tex}
 
 \chapter{Results}
 \begin{flushright} \textit{``The purpose of computing is insight, not numbers.''} --- R. W. Hamming \end{flushright}
@@ -68,6 +68,7 @@
 
 \printbibliography
 
+%\chapter*{Index}
 \chapter*{List of own publications}
 % \input{fd_publications.tex} % TODO
 
